--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="css/bootstrap.css" />
-    <link rel="stylesheet" href="js/bootstrap.js" /></head
-  >clear
+  </head>
   <body>
     <div class="container">
       <!-- Mulai Form -->
