menambahkan form-validation

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
             </div>
             <form action="" name="pendaftaran-ao1">
               <div class="form-group mb-3">
-                <input type="text" placeholder="Masukkan Nama Lengkap" class="form-control rounded-pill" name="nama" />
+                <input type="text" placeholder="Masukkan Nama Lengkap" class="form-control rounded-pill" name="nama" required />
               </div>
               <div class="form-group mb-3">
-                <input type="text" placeholder="Masukkan Kelas" class="form-control rounded-pill" name="kelas" />
+                <input type="text" placeholder="Masukkan Kelas" class="form-control rounded-pill" name="kelas" required />
               </div>
               <div class="form-group mb-3">
-                <input type="text" placeholder="Daerah Domisili (Alamat)" class="form-control rounded-pill" name="domisili" />
+                <input type="text" placeholder="Daerah Domisili (Alamat)" class="form-control rounded-pill" name="domisili" required />
               </div>
               <div class="form-group mb-3">
-                <input type="text" placeholder="Hobi (minimal 1)" class="form-control rounded-pill" name="hobi" />
+                <input type="text" placeholder="Hobi (minimal 1)" class="form-control rounded-pill" name="hobi" required />
               </div>
               <div>
                 <div class="form-group mb-3">
@@ -66,10 +66,10 @@
                   </div>
                 </div>
                 <div class="form-group mb-3">
-                  <input type="text" placeholder="Genre Anime Favorit (Boleh lebih dari satu)" class="form-control rounded-pill" name="genre" />
+                  <input type="text" placeholder="Genre Anime Favorit (Boleh lebih dari satu)" class="form-control rounded-pill" name="genre" required />
                 </div>
                 <div class="form-group mb-1">
-                  <textarea class="form-control rounded-pill" id="alasanBergabung" rows="3" placeholder="Alasan ingin bergabung kedalam organisasi AO1 ...." name="alasanBergabung"></textarea>
+                  <textarea class="form-control rounded-pill" id="alasanBergabung" rows="3" placeholder="Alasan ingin bergabung kedalam organisasi AO1 ...." name="alasanBergabung" required minlength="20"></textarea>
                 </div>
                 <div class="mb-3">
                   <div id="kegiatan" class="form-text">
