--- a/index.html
+++ b/index.html
@@ -1,142 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Formulir AO1 2022/2023</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
     <div class="container">
-      <!-- Mulai Form -->
-      <div class="row justify-content-center">
-        <div class="col-lg-7">
-          <div class="card p-4 shadow-lg mb-5 border-0 my-4">
-            <img src="logoao1.png" alt="Anime Organization 1" class="d-block mx-auto" />
-            <h4 class="py-2 text-center">WELCOME TO <b>AO1</b> COME JOIN US!</h4>
-            <div class="alert alert-primary d-none my-alert" role="alert">
-              yokoso, watashi tachi no sekai da!. Klik disini untuk masuk<a href="https://chat.whatsapp.com/EVs4AZVlGmBBvNCNVc3vuZ" class="alert-link" target="_blank"> ke dalamnya!</a>
-              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-            <form action="" name="pendaftaran-ao1">
-              <div class="form-group mb-3">
-                <input type="text" placeholder="Masukkan Nama Lengkap" class="form-control rounded-pill" name="nama" required />
-              </div>
-              <div class="form-group mb-3">
-                <input type="text" placeholder="Masukkan Kelas" class="form-control rounded-pill" name="kelas" required />
-              </div>
-              <div class="form-group mb-3">
-                <input type="text" placeholder="Daerah Domisili (Alamat)" class="form-control rounded-pill" name="domisili" required />
-              </div>
-              <div class="form-group mb-3">
-                <input type="text" placeholder="Hobi (minimal 1)" class="form-control rounded-pill" name="hobi" required />
-              </div>
-              <div>
-                <div class="form-group mb-3">
-                  <select class="form-select rounded-pill" aria-label="pilihDivisi" name="pilihan 1">
-                    <option selected>Pilih Divisi yang Ingin Didalami</option>
-                    <option value="Divisi Inti">Divisi Inti</option>
-                    <option value="Divisi Illust">Divisi Illust</option>
-                    <option value="Divisi Publish">Divisi Publish</option>
-                  </select>
-                </div>
-                <div class="form-group mb-2">
-                  <select class="form-select rounded-pill" aria-label="pilihDivisi" name="pilihan 2">
-                    <option selected>Pilih Divisi Lain yang Ingin Didalami</option>
-                    <option value="Divisi Inti">Divisi Inti</option>
-                    <option value="Divisi Illust">Divisi Illust</option>
-                    <option value="Divisi Publish">Divisi Publish</option>
-                  </select>
-                  <div id="pengertianDivisi" class="form-text">
-                    <a class="btn btn-link" data-bs-toggle="collapse" href="#collapse1" role="button" aria-expanded="false" aria-controls="collapse1"> Pengertian Divisi-Divisi pada AO1. </a>
-                  </div>
-                  <div class="collapse" id="collapse1">
-                    <div class="card card-body">
-                      <strong> Divisi Inti </strong>Divisi yang berisikan Para sesepuh, yaitu : Ketua, Wakil, Sekertaris, dan Bendahara.
-                      <br />
-                      <strong> Divisi Illust </strong> Divisi ini berisi orang orang yang suka menggambar, dari para junior sampai master.
-                      <br />
-                      <strong> Divisi Publish </strong> Divisi yang satu ini berisikan para editor-editor handal yang siap belajar bersama untuk menuju generasi emas smast!
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group mb-3">
-                  <input type="text" placeholder="Genre Anime Favorit (Boleh lebih dari satu)" class="form-control rounded-pill" name="genre" required />
-                </div>
-                <div class="form-group mb-1">
-                  <textarea class="form-control rounded-pill" id="alasanBergabung" rows="3" placeholder="Alasan ingin bergabung kedalam organisasi AO1 ...." name="alasanBergabung" required minlength="20"></textarea>
-                </div>
-                <div class="mb-3">
-                  <div id="kegiatan" class="form-text">
-                    <a class="btn btn-link" data-bs-toggle="collapse" href="#collapse2" role="button" aria-expanded="false" aria-controls="collapse2"> Jadwal Kegiatan Pada AO1</a>
-                  </div>
-                  <div class="collapse" id="collapse2">
-                    <div class="card card-body">
-                      <strong>Jadwal Kegiatan Bulan Ganjil : </strong>
-                      Minggu 1-3 mempraktekkan hal yg sudah dipelajari bersama (dapat diupload di IG A01)
-                      <br />
-                      Minggu 4 Nobar movie anime bersama
-                      <br />
-                      <br />
-                      <strong>Jadwal Kegiatan Bulan Genap: </strong>
-                      Minggu 1 belajar b. Jepang bersama
-                      <br />
-                      Minggu 2 Divisi Illust
-                      <br />
-                      Minggu 3 sejarah/budaya Jepang
-                      <br />
-                      Minggu 4 Divisi Publish
-                      <br />
-                      Kegiatan diliburkan selama masa" ujian/ menyiapkan event
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group d-grid gap-2">
-                <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
-
-                <button class="btn btn-primary btn-loading d-none" type="button" disabled>
-                  <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                  Loading...
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
+      <div class="judul mb-3">
+        <h1>MAAF, FORMULIR PENDAFTARAN SUDAH KAMI TUTUP.</h1>
       </div>
-      <!-- Akhir Form -->
+      <div class="gambar">
+        <img src="bye.jfif" class="img-fluid" alt="Bye" />
+      </div>
     </div>
-    <script>
-      const scriptURL = "https://script.google.com/macros/s/AKfycbzLJt9Nd7OoDmdrBF50ZT4cffuZed1txErzAuwGmviGgOE0zTZJNQw5t9e8YHCthyCT/exec";
-      const form = document.forms["pendaftaran-ao1"];
-      const btnKirim = document.querySelector(".btn-kirim");
-      const btnLoading = document.querySelector(".btn-loading");
-      const myToast = document.querySelector(".my-alert");
-
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-        // Ketika tombol submit di klik
-        //tampilkan tombol loading, hilangkan tombol kirim
-        btnLoading.classList.toggle("d-none");
-        btnKirim.classList.toggle("d-none");
-        fetch(scriptURL, { method: "POST", body: new FormData(form) })
-          .then((response) => {
-            //tampilkan tombol kirim, hilangkan tombol loading
-            btnLoading.classList.toggle("d-none");
-            btnKirim.classList.toggle("d-none");
-            form.reset();
-            //tampilkan alert
-            myToast.classList.toggle("d-none");
-            console.log("Success!", response);
-          })
-          .catch((error) => console.error("Error!", error.message));
-      });
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
